hastebin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hastebin
spec:
  ports:
    - name: service
      port: 7777
      protocol: TCP
